    was previously. Macros that generate nkPar nodes when object is expected are
    likely to break. Macros that expect nkPar nodes to which objects are passed
    are likely to break as well.
  - Base methods now need to be annotated with the ``base`` pragma. This makes
    multi methods less error-prone to use with the effect system.


  Library Additions
  -----------------

  - The nre module has been added, providing a better interface to PCRE than re.
  - The ``expandSymlink`` proc has been added to the ``os`` module.
  - The ``tailDir`` proc has been added to the ``os`` module.
  - Define ``nimPinToCpu`` to make the ``threadpool`` use explicit thread
    affinities. This can speed up or slow down the thread pool; it's up to you
    to benchmark it.
  - ``strutils.formatFloat`` and ``formatBiggestFloat`` do not depend on the C
    locale anymore and now take an optional ``decimalSep = '.'`` parameter.


  Compiler Additions
  ------------------

  - The compiler now supports a new configuration system based on
    `NimScript <docs/nims.html>`_.


  Language Additions
  ------------------

  - ``system.unsafeAddr`` can be used to access the address of a ``let``
    variable or parameter for C interoperability. Since technically this
    makes parameters and ``let`` variables mutable, it is considered even more
    unsafe than the ordinary ``addr`` builtin.
  - Added ``macros.getImpl`` that can be used to access the implementation of
    a routine or a constant. This allows for example for user-defined inlining
    of function calls.
  - Tuple unpacking finally works in a non-var/let context: ``(x, y) == f()``
    is allowed. Note that this doesn't declare ``x`` and ``y`` variables, for
    this ``let (x, y) == f()`` still needs to be used.
  - ``when nimvm`` can now be used for compiletime versions of some code
    sections. Click `here <docs/manual.html#when-nimvm-statement>`_ for details.


  Bugfixes
  --------


2015-05-04 Version 0.11.2 released